# GenAI

./: .gitignore  README.md  pyproject.toml
01_chat_models/: chat.py
02_embedding_models/: embedding.py
03_local_models/: local.py
04_chatBot/: chatBot.py
05_prompt_templets/: core.py
06_strucutured_outputs/: chat.py  notes.txt
07_RAG/: 01_development_plan.txt  main.py
07_RAG/01_document_loaders/: 01_text.py  02_pdf.py  03_page.py
07_RAG/02_text_splitters/: 01_character_text_splitter.py  02_token_based_splitting.py  03_Recursive_Character_Text_Splitter.py  notes.txt  notes1.txt
07_RAG/03_retrievers/: arxiv_retriever.py
07_RAG/03_retrievers/01_data_source/: arxiv_retriever.py
07_RAG/03_retrievers/02_retrival_strategy/: mmr.py  multi_query.py
07_RAG/03_retrievers/02_retrival_strategy/chroma_db/: chroma.sqlite3
08_vector_DB/: DB.py
08_vector_DB/chrome_DB/: chroma.sqlite3
09_Project/: db.py  index.html  main.py  script.js  styles.css
09_Project/chroma_DB/4f84a6c3-1b51-4ccb-9f91-56b24a5fa17c/: index_metadata.pickle
09_Project/chroma_DB/99a1479a-d3ef-4c76-b915-68e9a7113261/: index_metadata.pickle
09_Project/templates/: index.html
09_Project/ui/: app.py
10_runnables/: 01_sequence_runnable.py  02_parallel_runnable.py  03_runnable_passthrough.py
11_tools/01_build_in_tools/: main.py
11_tools/02_custom_tools/: main.py
11_tools/03_tool_calling/: 01_main.py  02_main.py  03_main.py
12_agents/: main.py
chatBot/: chatBot.py
chat_models/: hugginface.py
