[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "lxml>=6.1.1",
    "pypdf>=6.14.2",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
]
