[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "lxml>=6.1.1",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
]
